# ai-daily

./: .gitY  Makefile  README.md  go.mod  go.sum  main.go  main_test.go
cpp/: main  main.cpp  two_sum  two_sum.cpp
cpp/easy/: main.cpp
cpp/example/aphelios/: main.cpp
cpp/example/test/: CMakeLists.txt  main.cpp
cpp/lc/207/: main  main.cpp
cpp/lc/t1/: main.cpp
cpp/lc/t2/: main.cpp
cpp/lc/t4/: main.cpp
cpp/t1/tmp1/: main.cpp
cpp/t1/tmp2/: main.cpp
cpp/temps/t1/: main.cpp
cpp/temps/t10/: main.cpp
cpp/tmp1/: main.cpp
cpp/tmp2/: main  main.cpp
cpp/tmp3/: main  main.cpp
cpp/tmp4/: main  main.cpp
cpp/tmp5/: main  main.cpp
cpp/tmp6/: main  main.cpp
cpp/tmp7/: main  main.cpp
cpp/tmp8/: main  main.cpp
cpp/tmp9/: main.cpp
cpp/two_sum/: main.cpp
go/: go.mod  main.go
go/tcp-chat/: main.go
mojo/hello/: main.mojo  mojoproject.toml
practice/: go.mod  maxWater.go  maxWater_test.go  palindrome.go  palindrome2.go  palindrome2_test.go  palindromeNumber.go  palindromeNumber_test.go  palindrome_test.go  practice.go  practice_test.go  reverseString.go  reverseString_test.go  twoSum.go  twoSum_test.go  waterContainer.go  waterContainer_test.go
python/: main.py
python/patterns/: main.py
rust/temps/tmp3/obs/: Cargo.toml
tmp/: main.cpp
typescript/: two_sum.ts
typescript/tmp1/: two_sum.ts
typescript/tmp2/: tsconfig.json  two_sum.js  two_sum.ts
typescript/tmp3/: main.ts
typescript/tmp4/: main.ts
typescript/tmp5/: main.ts
typescript/tmp6/: main.ts
typescript/tmp7/: main.js  main.ts
typescript/tmp8/: main.ts
(+571 files in other folders)
