[package]
name = "obs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio               = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }   # async runtime :contentReference[oaicite:0]{index=0}
axum                = "0.8.4"                                                           # HTTP router :contentReference[oaicite:1]{index=1}
tracing-subscriber  = { version = "0.3.19", features = ["json", "env-filter"] }         # structured logs :contentReference[oaicite:2]{index=2}


